--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,7 +6,6 @@
 // для настройки семейства и размера шрифта по умолчанию, 
 // цветов, адаптивной сетки, корректной работы миксинов и t.d.
 @use "sass:math";
-
 // MIXIN подключает наши файлы шрифтов
 @mixin font($font_name, $file_name, $weight, $style) {
 	@font-face {
@@ -105,6 +104,33 @@ $containerWidth: $maxWidthContainer + $containerPadding;
 $mainColor: #000;
 $mainDarkColor: #141414;
 
+// Обнуление и общие параметры ============================================================================================================================================================================================== =============================================================================================== ===============================================================================================
+@import "null";
+
+body {
+	font-weight: 500;
+	// Скролл заблокирован
+	.lock & {
+		overflow: hidden;
+		touch-action: none;
+	}
+}
+// Оболочка ============================================================================================================================================================================================================================================================================================================================================================================================================================================
+.wrapper {
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
+	// Прижимаем footer
+	> main {
+		flex: 1 1 auto;
+	}
+	// Фикс для слайдеров
+	> * {
+		min-width: 0;
+	}
+}
+// Ограничивающий контейнер ======================================================================================================================================================================================================================
 [class*="__container"] {
   @if ($maxWidthContainer>0) {
     max-width: rem($maxWidthContainer);
@@ -127,7 +153,7 @@ $mainDarkColor: #141414;
 
 @import "popup";
 
-@import "null";
+
 
 @import "header";
 
