--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,4 +1,34 @@
 
+.button {
+  display: inline-block;
+  padding: 8px 52px;
+  color: #fff;
+  text-align: center;
+  font-weight: 600;
+  @include adaptiveValue("font-size", 20, 16, 992, 320);
+  line-height: 32px;
+  background: #E8AA31;
+  box-shadow: 0px 4px 20px rgba(232, 170, 49, 0.43);
+  border-radius: 3px;
+  transition: box-shadow .3s ease-in-out;
+  @media (any-hover: hover) {
+    &:hover {
+      box-shadow: 0px 4px 25px rgba(232, 170, 49, 0.63);
+    }
+  }
+  &_border {
+    color: #E8AA31;
+    background-color: #fff;
+    border: 1px solid #E8AA31;
+    box-shadow: none;
+  }
+  &_black {
+    padding: rem(8) rem(30);
+    color: #fff;
+    background-color: #000;
+    box-shadow: none;
+  }
+}
 .products-slider {
   // .products-slider__header
   &__header {
@@ -68,6 +98,17 @@
   background-color: #fff;
   @media (any-hover: hover) {
     box-shadow: 0 4px 25px rgba(0, 0, 0, .2);
+  }
+  // .product-card__sale
+  &__sale {
+    position: absolute;
+    top: rem(20);
+    left: 0;
+    padding: rem(6) rem(22);
+    color: #fff;
+    background-color: #E8AA31;
+    z-index: 10;
+    pointer-events: none;
   }
   // .product-card__image
   &__image {
@@ -303,4 +344,144 @@
       left: 8px;
     }
   }
+}
+// ====================================================================================
+.breadcrumps {
+	white-space: nowrap;
+	overflow: auto;
+	height: rem(22);
+	// .breadcrumbs__list
+	&__list {
+		display: flex;
+	}
+	// .breadcrumbs__link
+	&__link {
+		opacity: 0.5;
+		display: flex;
+		align-items: center;
+		&::after {
+			content: "\e900";
+			@extend %ic;
+			transform: rotate(-90deg);
+			font-size: rem(6);
+			margin: 0px em(10, 6);
+		}
+	}
+	// .breadcrumbs__current
+	&__current {
+		color: #E8AA31;
+	}
+}
+.title {
+  font-weight: 700;
+  font-size: rem(24);
+  line-height: math.div(29, 24);
+  &:not(:last-child) {
+    margin-bottom: em(25, 24);
+  }
+}
+// ====================================================================================
+.pagging {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  @include adaptiveValue("gap", 30, 15);
+  // .pagging__arrow
+  &__arrow {
+    color: #E8AA31;
+    &::before {
+      font-size: rem(10);
+      transform: rotate(-90deg);
+    }
+    &:disabled {
+      color: rgba(0, 0, 0, 0.12);
+    }
+    // .pagging__arrow_left
+    &_left {
+      transform: rotate(-180deg);
+    }
+    // .pagging__arrow_right
+    &_right {}
+  }
+  // .pagging__list
+  &__list {
+    display: flex;
+    align-items: center;
+    gap: rem(13);
+  }
+  // .pagging__item
+  &__item {}
+  // .pagging__link
+  &__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: rem(34);
+    height: rem(34);
+    border-radius: 50%;
+  }
+  &_active{
+    background-color: #E8AA31;
+    color: #fff;
+  }
+  @media (any-hover:hover) {
+    &:hover {
+      background-color: #E8AA31;
+      color: #fff;
+    }
+  }
+}
+.checkbox {
+	position: relative;
+	&:not(:last-child) {
+		margin-bottom: em(5);
+	}
+	// .checkbox__input
+	&__input {
+		position: absolute;
+		width: 0;
+		height: 0;
+		opacity: 0;
+		&:focus + .checkbox__label:before {
+			//box-shadow: 0 0 5px #000;
+		}
+		&:checked + .checkbox__label:after {
+			transform: scale(1);
+		}
+	}
+	// .checkbox__label
+	&__label {
+		cursor: pointer;
+		display: inline-flex;
+		align-items: center;
+		position: relative;
+		gap: 10px;
+		&:before {
+			content: "";
+			align-self: flex-start;
+			flex: 0 0 rem(18);
+			width: rem(18);
+			height: rem(18);
+			border: 1px solid #E8AA31;
+			border-radius: 2px;
+		}
+		&::after {
+			content: "";
+			transition: all 0.3s ease 0s;
+			transform: scale(0);
+			position: absolute;
+			width: rem(12);
+			border-radius: 2px;
+			height: rem(12);
+			top: 3px;
+			left: 3px;
+			background-color: #E8AA31;
+		}
+	}
+	// .checkbox__text
+	&__text {
+		small {
+			color: #E8AA31;
+		}
+	}
 }
